# skillflow-mcp

./: .gitignore  CHANGELOG.md  CHANGELOG_FIXES.md  CLAUDE_CODE_CONFIG.md  CONFIG_USAGE.md  DEBUG_NO_TOOLS.md  HOT_RELOAD_OPTIMIZATION.md  LICENSE  MCP_CONFIG_REFRESH_FIX.md  OPTIMIZATION_CHANGES.md  PROJECT_STATUS.md  README.md  README_ZH.md  ROUTE_OPTIMIZATION_ANALYSIS.md  USAGE.md  add_mcp_server_example.py  demo_context7_integration.md  fix_tool_signatures.py  main.py  pyproject.toml  run_web.py  test_claude_code_format.json  test_config_converter.py  test_connection.py  test_context7_skill.py  test_mcp_client.py  test_native_client.py  test_simple_proxy.py  test_stdio_connection.py  test_tool_naming.py  test_transport_detection.py  test_upstream_proxy.py  test_user_config.py
data/registry/: servers.json
data/sessions/: session_2025-11-16T09-29-52_18edab1c.json  session_2025-11-16T09-35-36_c251016c.json
docs/: CLAUDE_CODE_SETUP.md  CONTEXT7_INTEGRATION_SUMMARY.md  GETTING_STARTED_MCP.md  HOW_TO_ADD_MCP_SERVERS.md  INDEX.md  INSTALL.md  MCP_SERVER_SETUP_COMPLETE.md  NATIVE_MCP_CLIENT.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  QUICK_TEST.md  README.md  TEST_CONTEXT7.md  TROUBLESHOOTING_PROXY_TOOLS.md  UPSTREAM_SERVER_CONFIG.md  UPSTREAM_TOOLS_PROXY.md  USAGE_GUIDE.md
docs/en/: API_REFERENCE.md  QUICKSTART.md
docs/zh/: API_REFERENCE.md  QUICKSTART.md
examples/: claude_code_config.json  example_server_config.json  example_skill.json  upstream_servers_claude_code_format.json  upstream_servers_mixed_format.json
src/skillflow/: __init__.py  audit.py  config_converter.py  config_utils.py  engine.py  file_watcher.py  http_sse_client.py  mcp_clients.py  metrics.py  native_mcp_client.py  parameter_transform.py  recording.py  schemas.py  server.py  skill_cache.py  skills.py  storage.py  tool_naming.py  web_server.py  (+3 more)
tests/: __init__.py  test_storage.py
(+12 files in other folders)
